...
  late AddressSearchBuilder destinationBuilder;

  XFile? _pickedImage = null;
  OnlineStoreDTO? _editedStore = OnlineStoreDTO(
      id: "",
      name: "",
      phoneNumber: "",
      address: "",
      categories: [],
      operationHours: OpenOnlineStorePipeline.openings,
      image: null,
      products: [],
      imageFromPhone: null);
...
      if (res.getTag())
        Navigator.of(context).pushReplacementNamed(TutorialScreen.routeName);
      else {
        await showDialog(
          context: context,
          builder: (ctx) => AlertDialog(
            title: Text('Store Opening Error'),
            content: Text(res.getMessage()),
            actions: <Widget>[
              FlatButton(
                child: Text('Okay'),
                onPressed: () {
                  Navigator.of(ctx).pop();
...
            "Store's Products Limitation",
            style: TextStyle(fontWeight: FontWeight.bold, fontSize: 20),
          ),
          content: Text("We are Sorry, in this version store can contain up to ${productsLimitation} products only"),
          actions: <Widget>[
            ElevatedButton(
              key: const Key('product_error'),
              onPressed: () {
                Navigator.of(context).pop();
              },
              child: Text("Ok"),
            ),
          ],
...
                child: Form(
                  key: _detailsform,
                  child: Column(
                    children: <Widget>[
                      ImageInput(_selectImage, _unselectImage, null, _pickedImage, true),
                      TextFormField(
                        key: const Key('storeName'),
                        controller: _nameController,
                        decoration: InputDecoration(labelText: 'Store Name'),
                        textInputAction: TextInputAction.next,
                        validator: (value) {
                          if (value!.isEmpty) {
                            return 'Please provide a value.';
...
                              id: '',
                              products: _editedStore!.products,
                              imageFromPhone: _pickedImage == null ? null : File(_pickedImage!.path));
                        },
                      ),
                      TextFormField(
                        key: const Key('storeAddress'),
                        decoration: InputDecoration(labelText: 'Address'),
                        controller: OpenOnlineStorePipeline._controller,
                        onTap: () => showDialog(context: context, builder: (context) => destinationBuilder),
                        onChanged: (_) => _formChanged = true,
                        validator: (value) {
                          if (value!.isEmpty) {
...
      case 2:
        return openingHours;
      case 3:
        return Column(
          children: [
            ElevatedButton(
              key: const Key('add_product'),
              child: const Text('Add Product'),
              onPressed: _showAddProduct,
            ),
            Wrap(
              children: _products
                  .map((e) => Padding(
...
                                        Padding(
                                          padding: EdgeInsets.only(right: deviceSize.width * 0.025),
                                          child: CircleAvatar(
                                            radius: 25,
                                            backgroundColor: Theme.of(context).primaryColor,
                                            child: IconButton(
                                              key: const Key("continue_button"),
                                              color: Colors.black54,
                                              onPressed: () async => await continued(context),
                                              icon: Icon(_currentStep < 5 ? Icons.arrow_forward : Icons.done),
                                            ),
                                          ),
                                        ),
...
