...
                            return null;
                          },
                          onChanged: (_) => _formChanged = true,
                          onSaved: (value) {
                            _editedProduct = ProductDTO(
                                name: value!,
                                price: _editedProduct!.price,
                                description: _editedProduct!.description,
                                imageUrl: _editedProduct!.imageUrl,
                                id: _editedProduct!.id,
                                category: '',
                                storeID: '',
                                imageFromPhone: _pickedImage == null
                                    ? null
...
                    ),
                  ),
                ),
          bottomSheet: Container(
            width: double.infinity,
            child: ElevatedButton(
              key: const Key("save"),
              style: ElevatedButton.styleFrom(
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(8.0),
                  ),
                  primary: Theme.of(context).primaryColor),
              child: Container(
...
